--- a/Clojure/web/noiseparticles/resources/templates/base.html
+++ b/Clojure/web/noiseparticles/resources/templates/base.html
@@ -15,6 +15,7 @@
           <ul class="nav navbar-nav">
             <li class="{{home-selected}}"><a href="{{servlet-context}}/">Home</a></li>
             <li class="{{about-selected}}"><a href="{{servlet-context}}/resume">Resume</a></li>
+            <li class="{{about-selected}}"><a href="{{servlet-context}}/dice">Dice</a></li>
             <li class="{{about-selected}}"><a href="{{servlet-context}}/about">About</a></li>
           </ul>
         </div>
