--- a/Clojure/web/noiseparticles/resources/public/css/screen.css
+++ b/Clojure/web/noiseparticles/resources/public/css/screen.css
@@ -4,3 +4,24 @@ body {
     height: 100%;
     padding-top: 40px;
 }
+
+
+		.section {
+		border:2px solid #999;
+		background:#efefef;
+		margin:10px 0;
+		padding:10px;
+		width:350px;
+		height:3em;
+		}
+		.section p {
+		margin: 0;
+		padding:0;
+		display:inline-block;
+		width:150px;
+		line-height:1.5;
+		float:left;
+		}
+		.results {
+		font-size:2.0em;
+		}
