--- a/Angular/angular-cli-learning/src/app/servers/servers.component.html
+++ b/Angular/angular-cli-learning/src/app/servers/servers.component.html
@@ -1,3 +1,8 @@
+<label>Server Name:
+  <input type="text"
+         class="form-control"
+         (input)="onUpdateServerName($event)">
+</label>
 <button class="btn btn-primary"
         [disabled]="!allowNewServer"
         (click)="onCreateServer()">
