--- a/Angular/angular-cli-learning/src/app/servers/servers.component.html
+++ b/Angular/angular-cli-learning/src/app/servers/servers.component.html
@@ -1,7 +1,7 @@
 <label>Server Name:
   <input type="text"
          class="form-control"
-         (input)="onUpdateServerName($event)">
+         [(ngModel)]="serverName">
 </label>
 <button class="btn btn-primary"
         [disabled]="!allowNewServer"
@@ -9,6 +9,7 @@
   Add Server
 </button>
 <!--<p [innerText]="allowNewServer"></p>-->
+<p>{{serverName}}</p>
 <p>{{serverCreationStatus}}</p>
 <app-server></app-server>
 <app-server></app-server>
