--- a/Angular/angular-cli-learning/src/app/servers/servers.component.html
+++ b/Angular/angular-cli-learning/src/app/servers/servers.component.html
@@ -9,7 +9,7 @@
   Add Server
 </button>
 <!--<p [innerText]="allowNewServer"></p>-->
-<p>{{serverName}}</p>
+<!--<p>{{serverName}}</p>-->
 <p>{{serverCreationStatus}}</p>
 <app-server></app-server>
 <app-server></app-server>
