--- a/Angular/angular-cli-learning/src/app/servers/servers.component.html
+++ b/Angular/angular-cli-learning/src/app/servers/servers.component.html
@@ -11,6 +11,9 @@
 <!--<p [innerText]="allowNewServer"></p>-->
 <!--<p>{{serverName}}</p>-->
 <!--<p>{{serverCreationStatus}}</p>-->
-<div class="alert alert-success" *ngIf="serverCreated">Server was created. Server name is {{serverName}}</div>
+<div class="alert alert-success" *ngIf="serverCreated; else noServer">Server was created. Server name is {{serverName}}</div>
+<ng-template #noServer>
+  <div class="alert alert-danger">No server was created!</div>
+</ng-template>
 <app-server></app-server>
 <app-server></app-server>
