--- a/Angular/angular-cli-learning/src/app/server/server.component.html
+++ b/Angular/angular-cli-learning/src/app/server/server.component.html
@@ -1,1 +1,1 @@
-<p>Server with ID {{serverId}} is {{serverStatus}}</p>
+<div class="alert" [ngClass]="getAlertClass()">Server with ID {{serverId}} is {{serverStatus}}</div>
