creating records dynamically based on input data

--- a/Angular/angular-cli-learning/src/app/server/server.component.html
+++ b/Angular/angular-cli-learning/src/app/server/server.component.html
@@ -1,1 +1,1 @@
-<div class="alert" [ngClass]="getAlertClass()">Server with ID {{serverId}} is {{serverStatus}}</div>
+<div class="alert" [ngClass]="getAlertClass()">{{serverId}} : {{serverName}} is {{serverStatus}}</div>
